--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href = "helloworld.html"> Hello World </a></li>
         <li><a href = "bagels.html"> Bagels </a></li>
-        <li>more here...</li>
+        <li><a href = "githubinfo.html"> All About GitHub</li>
         <li>more here...</li>
         <li>more here...</li>
       </ul>
