--- a/githubinfo.html
+++ b/githubinfo.html
@@ -27,4 +27,6 @@
             <li> Q. What is the Octocat?</li>
             <li> A. The Octocat is GitHub's mascot.</li>
         </ul>
-    <img src="octocat.jpg" alt="Octocat image by Simon Oxley, The Octocat- a nerdy household name" width = "400">
+    <img src="octocat.jpg" alt="Octocat image by Simon Oxley, The Octocat- a nerdy household name" width = "400"
+   </body>
+</html>
