--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href = "helloworld.html"> Hello World </a></li>
         <li><a href = "bagels.html"> Bagels </a></li>
         <li><a href = "githubinfo.html"> All About GitHub</li>
-        <li>more here...</li>
+        <li><a href = "planets.html"> Planets</li>
         <li>more here...</li>
       </ul>
     </h3>
