--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <ul>
         <li><a href = "helloworld.html"> Hello World </a></li>
         <li><a href = "bagels.html"> Bagels </a></li>
-        <li><a href = "githubinfo.html"> All About GitHub</li>
-        <li><a href = "planets.html"> Planets</li>
+        <li><a href = "githubinfo.html"> All About GitHub</a></li>
+        <li><a href = "planets.html"> Planets</a></li>
         <li>more here...</li>
       </ul>
     </h3>
