--- a/index.html
+++ b/index.html
@@ -4,18 +4,54 @@
   <!--Program Purpose: This is my PVCC index file. It will have links to all my HTML and PYTHON programs -->
   <head>
     <title> Rylie Williams </title>
+    <style>
+      body {background-color:#28262c;
+        font-family: tahoma, verdana;
+        margin-top: 0px;
+      }
+      h1 {color:#998fc7; font-size: 1.5em; margin-left: 1em;}
+      h2 {color:#8477bb; font-size: 1.05em; margin-left: 2em;}
+      h3 {font-size: .95em; margin-left: 2em;}
+      ul {margin-left: 2.5em;}
+      table {width:800px; font-size: 1.3em; font-weight: bold; background color:#aaae7f; margin:auto;}
+      
+      a {text-decoration: none;}
+      a:link {color:#f9f5ff;}
+      a:visited {color:#ceadff;}
+      a:hover {color:#d4c2fc;}
+      a:active {color:#c9b1fb;}
+    </style>
   </head>
-  <body style = "color: #8a168a; background-color: #fcf7b4; font-family: arial, helvetica, sans-serif; ">
-    <h1> Rylie Williams </h1>
-    <h2>CSC 110 Web Pages </h2>
-    <h3>
-      <ul>
-        <li><a href = "helloworld.html"> Hello World </a></li>
-        <li><a href = "bagels.html"> Bagels </a></li>
-        <li><a href = "githubinfo.html"> All About GitHub</a></li>
-        <li><a href = "planets.html"> Planets</a></li>
-        <li>more here...</li>
-      </ul>
-    </h3>
+  <body>
+    <table>
+      <tr style ="background-color: #504c57;">
+        <td><a href ="index.html"> Home </a></td>
+        <td><a href ="https://www.pvcc.edu"> PVCC </a></td>
+        <td><a href ="https://www.w3schools.com/html/"> W3 Schools </a></td>
+        <td><a href ="contactus.html"> Contact Us </a></td>
+      </tr>
+      <tr><td colspan = "4">
+        <h1> Rylie Williams </h1>
+        <h2> CSC 110 Web Pages </h2>
+        <h3>
+          <ul>
+            <li><a href = "helloworld.html"> Hello World </a></li>
+            <li><a href ="bagels.html"> Bagels </a></li>
+            <li><a href ="githubinfo.html"> All About GitHub </a></li>
+            <li><a href ="planets.html"> Planets </a></li>
+            <li>more here...</li>
+            <li>more here...</li>
+          </ul>
+        </h3>
+        <h2>Chapter Terms</h2>
+        <h3>
+          <ul>
+            <li>more here...</li>
+            <li>more here...</li>
+            <li>more here...</li>
+          </ul>
+        </h3>
+        </td></tr>
+    </table>
   </body>
 </html>
