--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Chapter Terms</h2>
         <h3>
           <ul>
-            <li>more here...</li>
+            <li><a href = "opsys.html"> Chapter 3 Terminology </a></li>
             <li>more here...</li>
             <li>more here...</li>
           </ul>
