--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h3>
           <ul>
             <li><a href = "opsys.html"> Chapter 3 Terminology </a></li>
-            <li>more here...</li>
+            <li><a href = "network.html"> Chapter 4 Terminology </a></li>
             <li>more here...</li>
           </ul>
         </h3>
