--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href ="bagels.html"> Bagels </a></li>
             <li><a href ="githubinfo.html"> All About GitHub </a></li>
             <li><a href ="planets.html"> Planets </a></li>
-            <li><a href = "home.html"> Home </a></li>
+            <li><a href = "home.html"> Roper v. Simmons </a></li>
             <li>more here...</li>
           </ul>
         </h3>
