--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <ul>
             <li><a href = "opsys.html"> Chapter 3 Terminology </a></li>
             <li><a href = "network.html"> Chapter 4 Terminology </a></li>
-            <li>more here...</li>
+            <li><a href = "programming.html"> Chapter 5 Terminology </a></li>
           </ul>
         </h3>
         </td></tr>
