--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href = "opsys.html"> Chapter 3 Terminology </a></li>
             <li><a href = "network.html"> Chapter 4 Terminology </a></li>
             <li><a href = "programming.html"> Chapter 5 Terminology </a></li>
+            <li><a href = "prolang.html"> Chapter 6 Terminology </a></li>
           </ul>
         </h3>
         </td></tr>
