--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li><a href ="githubinfo.html"> All About GitHub </a></li>
             <li><a href ="planets.html"> Planets </a></li>
             <li><a href = "home.html"> Roper v. Simmons </a></li>
-            <li>more here...</li>
+            <li><a href = "tickets.py"> Cinema House Movies </a></li>
           </ul>
         </h3>
         <h2>Chapter Terms</h2>
