--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li><a href = "network.html"> Chapter 4 Terminology </a></li>
             <li><a href = "programming.html"> Chapter 5 Terminology </a></li>
             <li><a href = "prolang.html"> Chapter 6 Terminology </a></li>
+            <li><a href = "software-eng.html"> Chapter 7 Terminology </a></li>
           </ul>
         </h3>
         </td></tr>
