--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <li><a href ="planets.html"> Planets </a></li>
             <li><a href = "home.html"> Roper v. Simmons </a></li>
             <li><a href = "tickets.py"> Cinema House Movies </a></li>
+            <li><a href = "bagelscost.py"> Brownsville Bagels Cost </a></li>
           </ul>
         </h3>
         <h2>Chapter Terms</h2>
